--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -38,8 +38,8 @@ jobs:
       - bash: echo "##vso[build.updatebuildnumber]$(buildVersion)" # Update build number in Pipeline UI
         displayName: Update build number
       
-      - checkout: self
-      - checkout: MyGitHubRepo
+      - checkout: yaktest
+      - checkout: gx-yak-tests
 
 
       - task: NodeTool@0
