--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -56,7 +56,7 @@ jobs:
       - task: Cache@2
         inputs:
           key: 'npm | "$(Agent.OS)" | package-lock.json'
-          path: '$(System.DefaultWorkingDirectory)/yaktest'
+          path: '$(System.DefaultWorkingDirectory)/yaktest/'
           restoreKeys: 'npm | "$(Agent.OS)"'
         displayName: Cache npm
 
