--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -103,20 +103,23 @@ jobs:
         timeoutInMinutes: 15
         workingDirectory: $(System.DefaultWorkingDirectory)/yaktest/
 
-      #- task: PublishPipelineArtifact@0
-      #  displayName: 'Publish Screenshots (Cypress)'
-      #  condition: failed()
-      #  inputs:
-      #    artifactName: 'screenshots'
-      #    targetPath: '$(Build.SourcesDirectory)/tests/e2e/screenshots'
-      #
-      #- task: PublishPipelineArtifact@0
-      #  displayName: 'Publish Videos (Cypress)'
-      #  condition: failed()
-      #  inputs:
-      #    artifactName: 'videos'
-      #    targetPath: '$(Build.SourcesDirectory)/tests/e2e/videos'
-      #
+      - task: PublishPipelineArtifact@0
+        displayName: 'Publish Screenshots (Cypress)'
+        condition: failed()
+        inputs:
+          artifactName: 'screenshots'
+          targetPath: '$(Build.SourcesDirectory)/tests/e2e/screenshots'
+          publishLocation: 'pipeline'
+    
+      
+      - task: PublishPipelineArtifact@0
+        displayName: 'Publish Videos (Cypress)'
+        condition: failed()
+        inputs:
+          artifactName: 'videos'
+          targetPath: '$(Build.SourcesDirectory)/tests/e2e/videos'
+          publishLocation: 'pipeline'
+      
       #- task: PublishTestResults@2
       #  displayName: Publish test results (Cypress)
       #  condition: succeededOrFailed()
