--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@ storybook-static/
 
 # Dev/Build Artifacts
 /dist/
+/tests/e2e/specs/
 /tests/e2e/videos/
 /tests/e2e/screenshots/
 /tests/unit/coverage/
