--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -84,6 +84,7 @@ jobs:
           VUE_APP_AUTH_URL_CLIENT_ID: $(VUE_APP_AUTH_URL_CLIENT_ID)
           VUE_APP_AUTH_URL_APP_SECRET: $(VUE_APP_AUTH_URL_APP_SECRET)
           VUE_APP_INTERCOM: $(VUE_APP_INTERCOM)
+          CYPRESS_HOST: $(CYPRESS_HOST)
         workingDirectory: $(System.DefaultWorkingDirectory)/yaktest/
 
       - script: |
@@ -118,12 +119,12 @@ jobs:
           targetPath: '$(Build.SourcesDirectory)/yaktest/tests/e2e/videos'
           publishLocation: 'pipeline'
       
-      #- task: PublishTestResults@2
-      #  displayName: Publish test results (Cypress)
-      #  condition: succeededOrFailed()
-      #  inputs:
-      #    testRunner: JUnit
-      #    testResultsFiles: '$(Build.SourcesDirectory)/tests/cypress-junit-report.*.xml'
+      - task: PublishTestResults@2
+        displayName: Publish test results (Cypress)
+        condition: succeededOrFailed()
+        inputs:
+          testRunner: JUnit
+          testResultsFiles: '$(Build.SourcesDirectory)/tests/cypress-junit-report.*.xml'
 
       - script: |
           npm run build $(BUILD_MODE)
@@ -150,3 +151,6 @@ jobs:
       # includeRootFolder: true
 
       - task: PublishBuildArtifacts@1
+
+        
+
