Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -88,8 +88,7 @@ jobs:
         workingDirectory: $(System.DefaultWorkingDirectory)/yaktest/
 
       - script: |
-          npm run test:e2e -- --headless --spec "tests/e2e/specs/Desktop/*"
-          npm run test:e2e -- --headless --spec "tests/e2e/specs/Mobile/*"
+          npm run test:e2e -- --headless --spec "tests/e2e/specs/Desktop/*" && npm run test:e2e -- --headless --spec "tests/e2e/specs/Mobile/*"
         #  npx cypress run --record --parallel --ci-build-id $(buildVersion) --group "Desktop" -s "cypress/integration/Desktop/*"
         #  npx cypress run --record --parallel --ci-build-id $(buildVersion) --group "Mobile" -s "cypress/integration/Mobile/*"
 
