Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -155,7 +155,7 @@ jobs:
       # rootFolderOrFile: '$(System.DefaultWorkingDirectory)/storybook-static'
       # includeRootFolder: true
 
-      - task: PublishBuildArtifacts@1
+      - task: PublishPipelineArtifact@1
         condition: and(failed(), eq(variables['STAGE'], 'Dev'))
 
         
