--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -38,6 +38,8 @@ jobs:
       - bash: echo "##vso[build.updatebuildnumber]$(buildVersion)" # Update build number in Pipeline UI
         displayName: Update build number
 
+      - checkout: gx-yak-tests
+      - checkout: yaktest
 
       - task: NodeTool@0
         inputs:
