--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -122,7 +122,7 @@ jobs:
         displayName: Publish test results (Cypress)
         inputs:
           testResultsFormat: 'JUnit'
-          testResultsFiles: '$(Build.SourcesDirectory)/yaktest/tests/Test_Results.xml'
+          testResultsFiles: '/results/Test_Results.xml'
           searchFolder: '$(System.DefaultWorkingDirectory)/yaktest'
           testRunTitle: 'E2E-Results'
 
