--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -87,10 +87,11 @@ jobs:
           VUE_APP_INTERCOM: $(VUE_APP_INTERCOM)
           CYPRESS_HOST: $(CYPRESS_HOST)
         workingDirectory: $(System.DefaultWorkingDirectory)/yaktest/
+        
 
       - script: |
           npm run test:e2e -- --spec "tests/e2e/specs/Desktop/*" \
-          && npm run test:e2e -- --spec "tests/e2e/specs/Mobile/*" 2>/dev/null || exit 0
+          && npm run test:e2e -- --spec "tests/e2e/specs/Mobile/*" 
         #  npx cypress run --record --parallel --ci-build-id $(buildVersion) --group "Desktop" -s "cypress/integration/Desktop/*"
         #  npx cypress run --record --parallel --ci-build-id $(buildVersion) --group "Mobile" -s "cypress/integration/Mobile/*"
         displayName: 'Run tests e2e'
@@ -103,6 +104,7 @@ jobs:
           VUE_APP_AUTH_URL_APP_SECRET: $(VUE_APP_AUTH_URL_APP_SECRET)
         timeoutInMinutes: 15
         workingDirectory: $(System.DefaultWorkingDirectory)/yaktest/
+        continueOnError: true
 
       - task: PublishPipelineArtifact@0
         displayName: 'Publish Screenshots (Cypress)'
