--- a/azure-pipelines-dev.yml
+++ b/azure-pipelines-dev.yml
@@ -1,13 +1,27 @@
+  
 # Node.js with Vue
 # Build a Node.js project that uses Vue.
 # Add steps that analyze code, save build artifacts, deploy, and more:
 # https://docs.microsoft.com/azure/devops/pipelines/languages/javascript
 # Note that the trigger is ignored and overriden by Azure Pipelines options
+resources:
+  repositories:
+  - repository: yaktest # The name used to reference this repository in the checkout step
+    type: github
+    endpoint: za
+    name: zahidferz/yaktest
+  
+  - repository: gx-yak-tests # The name used to reference this repository in the checkout step
+    type: github
+    endpoint: gx-github
+    name: gestionix/gx-yak-tests 
+
 name: $(SourceBranchName)
 pool:
   vmImage: 'Ubuntu-16.04'
 
 jobs:
+
   - job: GetVersion
     displayName: Get Version
     steps:
@@ -23,10 +37,12 @@ jobs:
       appVersion: $[ dependencies.GetVersion.outputs['App.version'] ]
       buildIncrement: $[counter(variables['appVersion'], 0)] # create a counter that is used to increment build run for same app version
       buildVersion: '$(appVersion)-r$(buildIncrement)'
-      npm_config_cache: $(Pipeline.Workspace)/.npm
     steps:
       - bash: echo "##vso[build.updatebuildnumber]$(buildVersion)" # Update build number in Pipeline UI
         displayName: Update build number
+
+      - checkout: gx-yak-tests
+      - checkout: yaktest
 
       - task: NodeTool@0
         inputs:
@@ -34,25 +50,32 @@ jobs:
         displayName: 'Install Node.js'
 
       - script: |
-         sudo -- sh -c -e "echo '127.0.0.1 dev.local' >> /etc/hosts";
-          ls
-          echo "--------------------------------"
-          cd $(System.DefaultWorkingDirectory)
-          ls
-        displayName: 'Edit Host'
+          ls $(System.DefaultWorkingDirectory)
+          sudo -- sh -c -e "echo '127.0.0.1 dev.local' >> /etc/hosts";
+          cp -a $(System.DefaultWorkingDirectory)/gx-yak-tests/cypress/integration/.  $(System.DefaultWorkingDirectory)/yaktest/tests/e2e/specs
+          cp -a $(System.DefaultWorkingDirectory)/gx-yak-tests/cypress/plugins/. $(System.DefaultWorkingDirectory)/yaktest/tests/e2e/plugins
+          cp -a $(System.DefaultWorkingDirectory)/gx-yak-tests/cypress/fixtures/. $(System.DefaultWorkingDirectory)/yaktest/tests/e2e/fixtures
+          cp -a $(System.DefaultWorkingDirectory)/gx-yak-tests/cypress/support/. $(System.DefaultWorkingDirectory)/yaktest/tests/e2e/support
+          cp -a $(System.DefaultWorkingDirectory)/gx-yak-tests/cypress.env.json $(System.DefaultWorkingDirectory)/yaktest/
+        displayName: 'Setting up Cypress'
+      - task: Cache@2
+        inputs:
+          key: 'npm | $(Agent.OS) | $(System.DefaultWorkingDirectory)/yaktest/package-lock.json'
+          path: '/home/vsts/.npm'
+          restoreKeys: 'npm | $(Agent.OS) | $(System.DefaultWorkingDirectory)/yaktest/package-lock.json'
+        displayName: Cache npm
 
       - task: Cache@2
         inputs:
-          key: 'npm | "$(Agent.OS)" | package-lock.json'
-          restoreKeys: |
-             npm | "$(Agent.OS)"
-          path: $(npm_config_cache)
-        displayName: Cache npm
+          key: 'cypress | $(Agent.OS) | $(System.DefaultWorkingDirectory)/yaktest/package-lock.json'
+          path: /home/vsts/.cache/Cypress
+          restoreKeys: 'cypress | $(Agent.OS) | $(System.DefaultWorkingDirectory)/yaktest/package-lock.json'
+        displayName: Cache Cypress binary
 
-      - task: Npm@1
-        inputs:
-          command: 'ci'
+      - script: |
+          npm ci
         displayName: 'Install dependencies'
+        workingDirectory: $(System.DefaultWorkingDirectory)/yaktest/
 
       - script: |
           npm run test:unit
@@ -65,39 +88,48 @@ jobs:
           VUE_APP_AUTH_URL_CLIENT_ID: $(VUE_APP_AUTH_URL_CLIENT_ID)
           VUE_APP_AUTH_URL_APP_SECRET: $(VUE_APP_AUTH_URL_APP_SECRET)
           VUE_APP_INTERCOM: $(VUE_APP_INTERCOM)
+          CYPRESS_HOST: $(CYPRESS_HOST)
+        workingDirectory: $(System.DefaultWorkingDirectory)/yaktest/
+        
 
-      # - script: |
-      #     yarn test:e2e
-      #   displayName: 'Run tests e2e'
-      #   env:
-      #     VUE_APP_ACC_PROV_URL_CLIENT_ID: $(VUE_APP_ACC_PROV_URL_CLIENT_ID)
-      #     VUE_APP_ACC_PROV_URL_CLIENT_SECRET: $(VUE_APP_ACC_PROV_URL_CLIENT_SECRET)
-      #     VUE_APP_AUTH0_CLIENT_ID: $(VUE_APP_AUTH0_CLIENT_ID)
-      #     VUE_APP_AUTH_URL_APP_ID: $(VUE_APP_AUTH_URL_APP_ID)
-      #     VUE_APP_AUTH_URL_CLIENT_ID: $(VUE_APP_AUTH_URL_CLIENT_ID)
-      #     VUE_APP_AUTH_URL_APP_SECRET: $(VUE_APP_AUTH_URL_APP_SECRET)
-      #   timeoutInMinutes: 15
+      - script: |
+          npm run test:e2e -- --spec "tests/e2e/specs/Desktop/*" --reporter-options mochaFile=results/Desktop_Results.xml
+          npm run test:e2e -- --spec "tests/e2e/specs/Mobile/*" --reporter-options mochaFile=results/Mobile_Results.xml
+        #  npx cypress run --record --parallel --ci-build-id $(buildVersion) --group "Desktop" -s "cypress/integration/Desktop/*"
+        #  npx cypress run --record --parallel --ci-build-id $(buildVersion) --group "Mobile" -s "cypress/integration/Mobile/*"
+        displayName: 'Run tests e2e'
+        env:
+          VUE_APP_ACC_PROV_URL_CLIENT_ID: $(VUE_APP_ACC_PROV_URL_CLIENT_ID)
+          VUE_APP_ACC_PROV_URL_CLIENT_SECRET: $(VUE_APP_ACC_PROV_URL_CLIENT_SECRET)
+          VUE_APP_AUTH0_CLIENT_ID: $(VUE_APP_AUTH0_CLIENT_ID)
+          VUE_APP_AUTH_URL_APP_ID: $(VUE_APP_AUTH_URL_APP_ID)
+          VUE_APP_AUTH_URL_CLIENT_ID: $(VUE_APP_AUTH_URL_CLIENT_ID)
+          VUE_APP_AUTH_URL_APP_SECRET: $(VUE_APP_AUTH_URL_APP_SECRET)
+        timeoutInMinutes: 15
+        workingDirectory: $(System.DefaultWorkingDirectory)/yaktest/
+        continueOnError: true
 
-      #- task: PublishPipelineArtifact@0
-      #  displayName: 'Publish Screenshots (Cypress)'
-      #  condition: failed()
-      #  inputs:
-      #    artifactName: 'screenshots'
-      #    targetPath: '$(Build.SourcesDirectory)/tests/e2e/screenshots'
-      #
-      #- task: PublishPipelineArtifact@0
-      #  displayName: 'Publish Videos (Cypress)'
-      #  condition: failed()
-      #  inputs:
-      #    artifactName: 'videos'
-      #    targetPath: '$(Build.SourcesDirectory)/tests/e2e/videos'
-      #
-      #- task: PublishTestResults@2
-      #  displayName: Publish test results (Cypress)
-      #  condition: succeededOrFailed()
-      #  inputs:
-      #    testRunner: JUnit
-      #    testResultsFiles: '$(Build.SourcesDirectory)/tests/cypress-junit-report.*.xml'
+      - task: PublishPipelineArtifact@0
+        displayName: 'Publish Screenshots (Cypress)'
+        inputs:
+          artifactName: 'screenshots'
+          targetPath: '$(Build.SourcesDirectory)/yaktest/tests/e2e/screenshots'
+          publishLocation: 'pipeline'
+      
+      - task: PublishPipelineArtifact@0
+        displayName: 'Publish Videos (Cypress)'
+        inputs:
+          artifactName: 'videos'
+          targetPath: '$(Build.SourcesDirectory)/yaktest/tests/e2e/videos'
+          publishLocation: 'pipeline'
+      
+      - task: PublishTestResults@2
+        displayName: Publish test results (Cypress)
+        inputs:
+          testResultsFormat: 'JUnit'
+          testResultsFiles: '$(System.DefaultWorkingDirectory)/yaktest/results/*.xml'
+          searchFolder: '$(System.DefaultWorkingDirectory)/yaktest'
+          testRunTitle: 'E2E-Results'
 
       - script: |
           npm run build $(BUILD_MODE)
@@ -111,11 +143,15 @@ jobs:
           VUE_APP_AUTH_URL_CLIENT_ID: $(VUE_APP_AUTH_URL_CLIENT_ID)
           VUE_APP_AUTH_URL_APP_SECRET: $(VUE_APP_AUTH_URL_APP_SECRET)
           VUE_APP_INTERCOM: $(VUE_APP_INTERCOM)
+        workingDirectory: $(System.DefaultWorkingDirectory)/yaktest/
 
       - task: ArchiveFiles@2
         inputs:
-          rootFolderOrFile: '$(System.DefaultWorkingDirectory)/dist'
+          rootFolderOrFile: '$(System.DefaultWorkingDirectory)/yaktest/dist'
           includeRootFolder: true
+          archiveType: 'zip'
+          archiveFile: '$(Build.ArtifactStagingDirectory)/$(buildVersion).zip'
+          replaceExistingArchive: true
 
       # - task: ArchiveFiles@2
       # inputs:
@@ -123,3 +159,7 @@ jobs:
       # includeRootFolder: true
 
       - task: PublishBuildArtifacts@1
+        inputs:
+          PathtoPublish: '$(Build.ArtifactStagingDirectory)'
+          ArtifactName: '$(buildVersion)'
+          publishLocation: 'Container'
